# music-info

./: .env-example  .firebaserc  .gitignore  README.md  deploy-firebase-macos.sh  deploy.bat  langgraph.json  pyproject.toml  requirements.txt
functions/: .gitignore  main.py  musicinfo-0.1.10-py3-none-any.whl  musicinfo-0.1.12-py3-none-any.whl  musicinfo-0.1.8-py3-none-any.whl  musicinfo-0.1.9-py3-none-any.whl  requirements.txt  requirements.txt.bak
musicinfo/: main.py
musicinfo/agents/: __init__.py  full_tools.py  track_info_agent.py
musicinfo/api/: router.py
musicinfo/api/endpoints/: whatsapp_webhook.py
musicinfo/core/: __init__.py
musicinfo/core/messaging/: messenger.py  whatsapp.py  whatsapp_test.py
musicinfo/models/: __init__.py  song_types.py
musicinfo/tools/: __init__.py  build_song_history_whatsapp_template.py  build_whatsapp_error_template_message.py  format_json.py  get_song_history.py  get_track_info.py  get_track_info_from_url.py  send_simple_message.py  send_whatsapp_template.py
musicinfo/utils/: __init__.py  get_og_metadata.py  get_track_from_url.py  is_spotify_url.py  song_info_to_arr.py  spotify_client.py  spotify_settings.py
musicinfo/workflows/: __init__.py  full_tools_workflow.py  test_workflow.py  track_info_complex_workflow.py  track_info_tools_workflow.py  track_info_workflow.py
