[tool.poetry]
name = "musicinfo"
version = "0.1.11"
description = ""
authors = ["Michael Huahuasoncco <michael_h_p_@hotmail.com>"]
readme = "README.md"
packages = [{include = "musicinfo"}]

[tool.poetry.dependencies]
python = "^3.12,<3.14"
langgraph = "^1.0.1"
langchain-openai = "^1.0.1"
langchain-core = "1.0.2 "
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.13.3"
langchain-deepseek = "^1.0.0"

[tool.poetry.group.dev.dependencies]
langgraph-cli = "^0.1.77"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"